# beyondSU

./: .gitignore
.githooks/: fix_endif_comments.py  pre-commit
.github/workflows/: build-lkm.yml  build-manager.yml  build-su.yml  ddk-lkm.yml  ksud.yml  ksuinit.yml  release.yml
docs/: README.md  superkey-auth.md
docs/zh/: README.md
kernel/: Kbuild  Kconfig  Makefile  allowlist.c  allowlist.h  apk_sign.c  apk_sign.h  app_profile.c  app_profile.h  arch.h  feature.c  feature.h  file_wrapper.c  file_wrapper.h  kernel_compat.c  kernel_compat.h  kernel_umount.c  kernel_umount.h  klog.h  ksu.c  ksu.h  ksud.c  ksud.h  lsm_hooks.c  manager.h  manager_sign.h  manual_su.c  manual_su.h  pkg_observer.c  pkg_observer_defs.h  seccomp_cache.c  seccomp_cache.h  setuid_hook.c  setuid_hook.h  setup.sh  sucompat.c  sucompat.h  sulog.c  sulog.h  supercalls.c  (+9 more)
kernel/kpm/: compact.c  compact.h  kpm.c  kpm.h  super_access.c  super_access.h
kernel/selinux/: rules.c  selinux.c  selinux.h  selinux_defs.h  sepolicy.c  sepolicy.h
manager/: build.gradle.kts
manager/app/src/main/: AndroidManifest.xml
manager/app/src/main/cpp/: jni.c  ksu.c  ksu.h
manager/app/src/main/java/com/anatdx/yukisu/: KernelSUApplication.kt  Natives.kt
manager/app/src/main/java/com/anatdx/yukisu/network/: RemoteToolsDownloader.kt
manager/app/src/main/java/com/anatdx/yukisu/ui/: MainActivity.kt
manager/app/src/main/java/com/anatdx/yukisu/ui/component/: AboutCard.kt  SuperKeyDialog.kt
manager/app/src/main/java/com/anatdx/yukisu/ui/hymofs/: HymoFSConfig.kt
manager/app/src/main/java/com/anatdx/yukisu/ui/screen/: Flash.kt  Home.kt  Module.kt
manager/app/src/main/java/com/anatdx/yukisu/ui/theme/: Color.kt  Theme.kt
manager/app/src/main/java/com/anatdx/yukisu/ui/util/: KsuCli.kt
manager/app/src/main/java/ui/screen/kernelFlash/state/: KernelFlashState.kt
manager/app/src/main/java/ui/screen/moreSettings/: MoreSettings.kt  MoreSettingsHandlers.kt
manager/app/src/main/java/ui/screen/moreSettings/component/: MoreSettingsDialogs.kt
manager/app/src/main/java/ui/screen/moreSettings/state/: MoreSettingsState.kt
manager/app/src/main/jniLibs/: .gitignore
manager/app/src/main/res/drawable/: ic_launcher_monochrome.xml  ic_launcher_monochrome_alt.xml
manager/app/src/main/res/values/: strings.xml
manager/app/src/main/res/values-ar/: strings.xml
manager/app/src/main/res/values-az/: strings.xml
manager/app/src/main/res/values-bn/: strings.xml
manager/app/src/main/res/values-bn-rBD/: strings.xml
manager/app/src/main/res/values-bs/: strings.xml
manager/app/src/main/res/values-da/: strings.xml
manager/app/src/main/res/values-de/: strings.xml
manager/app/src/main/res/values-es/: strings.xml
manager/app/src/main/res/values-et/: strings.xml
manager/app/src/main/res/values-fa/: strings.xml
manager/app/src/main/res/values-fil/: strings.xml
manager/app/src/main/res/values-fr/: strings.xml
manager/app/src/main/res/values-hi/: strings.xml
manager/app/src/main/res/values-hr/: strings.xml
manager/app/src/main/res/values-hu/: strings.xml
manager/app/src/main/res/values-idn/: strings.xml
manager/app/src/main/res/values-in/: strings.xml
manager/app/src/main/res/values-it/: strings.xml
manager/app/src/main/res/values-iw/: strings.xml
manager/app/src/main/res/values-ja/: strings.xml
manager/app/src/main/res/values-kn/: strings.xml
manager/app/src/main/res/values-ko/: strings.xml
manager/app/src/main/res/values-lt/: strings.xml
manager/app/src/main/res/values-lv/: strings.xml
manager/app/src/main/res/values-mr/: strings.xml
manager/app/src/main/res/values-ms/: strings.xml
manager/app/src/main/res/values-nl/: strings.xml
manager/app/src/main/res/values-pl/: strings.xml
manager/app/src/main/res/values-pt/: strings.xml
manager/app/src/main/res/values-pt-rBR/: strings.xml
manager/app/src/main/res/values-ro/: strings.xml
manager/app/src/main/res/values-ru/: strings.xml
manager/app/src/main/res/values-sl/: strings.xml
manager/app/src/main/res/values-te/: strings.xml
manager/app/src/main/res/values-th/: strings.xml
manager/app/src/main/res/values-tr/: strings.xml
manager/app/src/main/res/values-uk/: strings.xml
manager/app/src/main/res/values-vi/: strings.xml
manager/app/src/main/res/values-zh-rCN/: strings.xml
manager/app/src/main/res/values-zh-rHK/: strings.xml
manager/app/src/main/res/values-zh-rTW/: strings.xml
scripts/: ksubot.py
userspace/ksud/: .clang-format  .gitignore  CMakeLists.txt
userspace/ksud/scripts/: embed_assets.py  generate_version.py
userspace/ksud/src/: assets.cpp  assets.hpp  cli.cpp  cli.hpp  debug.cpp  debug.hpp  defs.cpp  defs.hpp  init_event.cpp  init_event.hpp  kpm.cpp  kpm.hpp  log.cpp  log.hpp  main.cpp  restorecon.cpp  restorecon.hpp  su.cpp  su.hpp  umount.cpp  umount.hpp  utils.cpp  utils.hpp
userspace/ksud/src/boot/: apk_sign.cpp  apk_sign.hpp  boot_patch.cpp  boot_patch.hpp
userspace/ksud/src/core/: assets.cpp  assets.hpp  feature.cpp  feature.hpp  hide_bootloader.cpp  hide_bootloader.hpp  ksucalls.cpp  ksucalls.hpp  restorecon.cpp  restorecon.hpp  susfs.cpp  susfs.hpp
userspace/ksud/src/flash/: flash_ak3.cpp  flash_ak3.hpp
userspace/ksud/src/hymo/: hymo_cli.cpp  hymo_cli.hpp  hymo_defs.hpp  hymo_utils.cpp  hymo_utils.hpp
userspace/ksud/src/hymo/conf/: config.cpp  config.hpp
userspace/ksud/src/hymo/core/: executor.cpp  executor.hpp  inventory.cpp  inventory.hpp  modules.cpp  modules.hpp  planner.cpp  planner.hpp  state.cpp  state.hpp  storage.cpp  storage.hpp  sync.cpp  sync.hpp
userspace/ksud/src/hymo/mount/: hymo_magic.h  hymofs.cpp  hymofs.hpp  magic.cpp  magic.hpp  overlay.cpp  overlay.hpp
userspace/ksud/src/module/: metamodule.cpp  metamodule.hpp  module.cpp  module.hpp  module_config.cpp  module_config.hpp
userspace/ksud/src/profile/: profile.cpp  profile.hpp
userspace/ksud/src/sepolicy/: sepolicy.cpp  sepolicy.hpp
userspace/ksuinit/: CMakeLists.txt
userspace/ksuinit/src/: init.cpp  init.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  main.cpp
(+8 files in other folders)
